# 117-Sampling-based-Path-Planning-for-High-quality-Aerial-3D-Reconstruction-of-Urban-Scenes

./: citation.txt
code/: CMakeLists.txt  main.cpp
code/entity/: map.cpp  map.h  point.cpp  point.h  pos_pack.h  sample_point.cpp  sample_point.h  view_point.cpp  view_point.h  view_score.cpp  view_score.h
code/utils/: Params.h  compare.cpp  compare.h  ea_utils.cpp  ea_utils.h  io_utils.cpp  io_utils.h  log.cpp  log.h  ply_utils.cpp  ply_utils.h  score.cpp  score.h  tools.cpp  tools.h
data/: data3.ply  sp400.ply  xuexiao_fine_90.ply
